# HackWb

./: 0_texts.py  1_widgets.py  2_inference.py  3_model_loading.py  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.sh  streamlit_app.py  test_app.py  train_fast.py
app/: main.py
models/: model_info.pkl  xgboost_model.pkl
models/optuna/: lgbm_model_optuna.pkl  model_info.pkl
